--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -204,7 +204,7 @@ It is most commonly the case that attenuation of radiation and vertical transpor
 Typically, diel temperature range is smaller beneath dense canopies than above, resulting from lower maximum daytime $T_{air}$ and warmer nighttime minimum $T_{air}$ than beneath open canopies or in nearby clearings [<!-- @missonPartitioningForestCarbon2007-->; @defrenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; <!--@defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019-->; @zellweger_seasonal_2019; <!--@ramboCanopyMicroclimateResponse2009; @binLeafTraitExpression2022; @haesenForestTempSubcanopyMicroclimate2021a; @meeussenMicroclimaticEdgetointeriorGradients2021-->]. 
 Notably, buffering against high maximum daytime $T_{air}$ becomes weaker and can be reversed as canopies become more open [Supporting Information Figure `r SIfig_NEON_all`,@curtis_intracanopy_2019; @meeussenMicroclimaticEdgetointeriorGradients2021]. 
 Analogous to a 'canopy greenhouse effect', in open forests, below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$.
-This is due to turbulent air mixing and the thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers [e.g., OSBS, Fig. `r fig_NEON_vertical`g, Supporting Information Figure `r SIfig_NEON_all`b, @hadleyInfluenceKrummholzMat1987; @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015; @mullerEvidenceEfficientNonevaporative2021].
+This is due to turbulent air mixing and the thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers [e.g., OSBS, Fig. `r fig_NEON_vertical`g, Supporting Information Figure `r SIfig_NEON_all`b, <!--@hadleyInfluenceKrummholzMat1987-->; @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;<!--@zweifelMiddayStomatalClosure2002; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015-->; @mullerEvidenceEfficientNonevaporative2021].
 These usually-modest gradients in $T_{air}$ combine with the above-described gradients in micrometeorological conditions to shape $T_{leaf}$ patterns within canopies.
 
 ## 2. Leaf temperature 
@@ -249,9 +249,9 @@ In addition to lower wind speeds (Fig. `r fig_NEON_vertical`), higher RH in the 
 
 Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`). 
 Forests with closed canopies and high LAI, including tropical and temperate broadleaf forests, act as a parasol, absorbing most of the incoming radiation and preventing vertical air mixing in the understory. 
-Therefore, in these forests, leaves in the upper canopy can experience greater $T_{leaf}-T_{air}$ and higher maximum $T_{leaf}$ than do lower-canopy leaves, in some cases exceeding the optima for photosynthesis ($T_{opt}$) because of $g_s$ limitation and high solar radiation loads [@carterExperimentalWarmingTropical2021; @niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
+Therefore, in these forests, leaves in the upper canopy can experience greater $T_{leaf}-T_{air}$ and higher maximum $T_{leaf}$ than do lower-canopy leaves, in some cases exceeding the optima for photosynthesis ($T_{opt}$) because of $g_s$ limitation and high solar radiation loads [@carterExperimentalWarmingTropical2021; <!--@niinemetsShapeLeafPhotosynthetic1999-->; @doughtyAreTropicalForests2008; <!--@fauset_differences_2018-->; @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021; <!--@rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018-->]. 
 In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. 
-This mixing and light transmission can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ at lower heights relative to the upper canopy [Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`, @hadleyInfluenceKrummholzMat1987; @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]. 
+This mixing and light transmission can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ at lower heights relative to the upper canopy [Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`, <!--@hadleyInfluenceKrummholzMat1987-->; @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]. 
 The latter can result from a combination of still air at lower heights (Fig. `r fig_NEON_vertical`e), and sunflecks or the 'canopy greenhouse effect', as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013], and because shade leaves tend to have lower $g_s$  [@schymanskiStomatalControlLeaf2013]. 
 Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies due to heat from the soil increasing the $T_{leaf}$ of the foliage close to the ground [Fig. `r SIfig_NEON_all`, @hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVerticalinpress]. 
 One of the few remote sensing studies combining drone lidar and thermal data found strong vertical gradients in midday plant temperature with ~5$^{\circ}$C cooler temperatures lower in the vertical profile of a dense forest stand in the sub-alpine Eastern Swiss Alps [@websterThreedimensionalThermalCharacterization2018]. 
